<resources>

    <string name="app_name">InterruptionManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Interruption manager</string>
    <string name="work_settings">Work settings</string>
    <string name="work_time_table">Work time</string>
    <string name="pref_work_interruption">Interrupt work</string>
    <string name="pref_work_interruption_summary">Select if phone can interrupt at work.</string>
    <string name="pref_starting_work">Starting time work</string>
    <string name="pref_starting_work_summary">Set starting time for work.</string>
    <string name="pref_ending_work">Ending time work</string>
    <string name="pref_ending_work_summary">Set ending time for work.</string>
    <string name="notificationTime">TODO</string>
    <string name="txtPreferencesButton">Settings</string><string name="at_home_sleeping">At home sleeping</string>
    <string name="at_home_relaxing">At home relaxing</string>
    <string name="at_home_working">At home working</string>
    <string name="at_work_in_meeting">At work in meeting</string>
    <string name="at_work_at_desk">At work at desk</string>
    <string name="on_bike">On bike</string>
    <string name="in_car">In car</string>
    <string name="in_public_transport">In public transport</string>

</resources>